--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="./recipes/BuffaloChickenWings.html">Buffalo Chicken Wings</a></li>
+    <li></li>
+  </ul>
+  
 </body>
 </html>
