--- a/recipes/buffaloChickenWings.html
+++ b/recipes/buffaloChickenWings.html
@@ -9,5 +9,36 @@
   <a href="../index.html">Go back</a>
   <h1>Buffalo Chicken Wings</h1>
   <img src="https://www.allrecipes.com/thmb/SYEp3I3lgFrRaNE0rU5f6N_9DMw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/24087-restaurant-style-buffalo-chicken-wings-DDMFS-4x3-861e36c713264f3a9db8ba02d3afbea1.jpg" alt="" height="500">
+  <h2>Description</h2>
+  <p>There's no need to go out or even order in when you're craving delicious, spicy hot wings. Instead, next time you want
+  your Buffalo wing fix, try this top-rated recipe. Grab your favorite dipping sauce and celery sticks because this is
+  about to be your new go-to hot wings recipe.</p>
+  <p>You'll never be disappointed by dry or not-hot-enough wings ever again!</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>½ cup all-purpose flour</li>
+    <li>¼ teaspoon ground paprika</li>
+    <li>¼ teaspoon cayenne pepper</li>
+    <li>¼ teaspoon salt</li>
+    <li>10 chicken wings</li>
+    <li>2 cups vegetable oil for frying, or as needed</li>
+    <li>¼ cup butter</li>
+    <li>¼ cup hot sauce</li>
+    <li>1 pinch ground black pepper</li>
+    <li>1 pinch garlic powder</li>
+  </ul>
+  <h3>How to Make Hot Wings</h3>
+  <p>You'll find the full step-by-step instructions below, but here's what you can expect from this hot wings recipe:</p>
+  <ol>
+    <li>Coat with flour: Coat the chicken wings with a mixture of flour, paprika, cayenne pepper, and salt. Refrigerate coated
+  wings for at least an hour.</li>
+    <li>Make the sauce: In a saucepan on the stove, combine butter, hot sauce, pepper, and garlic. Stir until butter is
+  melted,
+  then remove from heat and reserve for later.</li>
+    <li>Fry the wings: Fry the chicken wings in a skillet filled with oil heated to 375 degrees F. Remove the wings and place
+  them on a paper-towel lined plate to remove the excess oil.</li>
+    <li>Coat the wings: Drizzle the hot wings sauce over the fried wings or place the hot wings in a bowl with the sauce and mix
+    together until combined.</li>
+</ol>
 </body>
 </html>
