--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,7 +13,7 @@
   <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
   <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list
   and step-by-step instructions in the recipe below, but let's go over the basics:</p>
-  <h3>Lasagna Ingredients</h3>
+  <h3>Ingredients</h3>
   <ul>
     <li>Meat:This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
     <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
