--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="./recipes/lasagna.html">Lasagna</a></li>
     <li><a href="./recipes/buffaloChickenWings.html">Buffalo Chicken Wings</a></li>
-    <li></li>
+    <li><a href="./recipes/brownie.html">Brownie</a></li>
   </ul>
   
 </body>
