feat: add style.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin recipes</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-  <h1>Odin Recipes</h1>
-  <ul>
+<body class="menu">
+  <h1 class="menu-title">Odin Recipes</h1>
+  <ul class="menu-list">
     <li><a href="./recipes/lasagna.html">Lasagna</a></li>
     <li><a href="./recipes/buffaloChickenWings.html">Buffalo Chicken Wings</a></li>
     <li><a href="./recipes/brownie.html">Brownie</a></li>
