--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brownie</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="dish-page">
   <a href="../index.html">Go back</a>
   <h1>Best Brownies</h1>
   <img src="https://www.allrecipes.com/thmb/XZ3yigsYEHUPMUI9923qC_N-DyM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/10549-Best-brownies-mfs_001-8254837385364a4585e038c4f2a0a20f.jpg" alt="Brownie photo" height="500">
