--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lasagna recipe</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="dish-page">
   <a href="../index.html">Go back</a>
   <h1>Lasagna</h1>
   <img src="https://www.allrecipes.com/thmb/nb2eEifCwlw1yc5gnXMwBy4BkXQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/23600-worlds-best-lasagna-DDMFS-2x1-1193-40ded59b2a224312b66bdafbb885adc0.jpg" alt="Lasagna photo" height="500">
