--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <title>Odin recipes</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-<body class="menu">
-  <h1 class="menu-title">Odin Recipes</h1>
-  <ul class="menu-list">
-    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="./recipes/buffaloChickenWings.html">Buffalo Chicken Wings</a></li>
-    <li><a href="./recipes/brownie.html">Brownie</a></li>
-  </ul>
+<body>
+  <div class="menu">
+    <h1 class="menu-title">Odin Recipes</h1>
+    <ul class="menu-list">
+      <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="./recipes/buffaloChickenWings.html">Buffalo Chicken Wings</a></li>
+      <li><a href="./recipes/brownie.html">Brownie</a></li>
+    </ul>
+  </div>
+  
   
 </body>
 </html>
