fix: edit style.css for home page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <li><a href="./recipes/lasagna.html">Lasagna</a></li>
       <li><a href="./recipes/buffaloChickenWings.html">Buffalo Chicken Wings</a></li>
       <li><a href="./recipes/brownie.html">Brownie</a></li>
+      <li><a href="./recipes/brownie.html">Brownie</a></li>
+      <li><a href="./recipes/brownie.html">Brownie</a></li>
+      <li><a href="./recipes/brownie.html">Brownie</a></li>
+
     </ul>
   </div>
   
